--- a/public/errorlog.html
+++ b/public/errorlog.html
@@ -1,5 +1,211 @@
 <h3>Exception information:</h3>
 
+         <p><strong>Date:</strong> Nov 09, 2020 13:01PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[42S02]: Base table or view not found: 1146 Table 'test.category' doesn't exist</p>
+
+         <p><strong>Code:</strong> 42S02</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Model\Database.php</p>
+
+         <p><strong>Line:</strong> 140</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Model\Database.php(140): PDOStatement->execute()
+#1 C:\xampp\htdocs\core\Model\Database.php(31): Core\Model\Database->execute(Object(PDOStatement))
+#2 C:\xampp\htdocs\src\Repository\CategoryRepository.php(13): Core\Model\Database->select('SELECT * FROM c...')
+#3 C:\xampp\htdocs\src\Controller\BaseController.php(15): App\Repository\CategoryRepository->findAll()
+#4 C:\xampp\htdocs\core\Bootstrap.php(75): App\Controller\BaseController->index()
+#5 C:\xampp\htdocs\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#6 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 13:01PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[42S02]: Base table or view not found: 1146 Table 'test.category' doesn't exist</p>
+
+         <p><strong>Code:</strong> 42S02</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Model\Database.php</p>
+
+         <p><strong>Line:</strong> 140</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Model\Database.php(140): PDOStatement->execute()
+#1 C:\xampp\htdocs\core\Model\Database.php(31): Core\Model\Database->execute(Object(PDOStatement))
+#2 C:\xampp\htdocs\src\Repository\CategoryRepository.php(13): Core\Model\Database->select('SELECT * FROM c...')
+#3 C:\xampp\htdocs\src\Controller\BaseController.php(15): App\Repository\CategoryRepository->findAll()
+#4 C:\xampp\htdocs\core\Bootstrap.php(75): App\Controller\BaseController->index()
+#5 C:\xampp\htdocs\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#6 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 12:48PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[42S02]: Base table or view not found: 1146 Table 'test.category' doesn't exist</p>
+
+         <p><strong>Code:</strong> 42S02</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Model\Database.php</p>
+
+         <p><strong>Line:</strong> 140</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Model\Database.php(140): PDOStatement->execute()
+#1 C:\xampp\htdocs\core\Model\Database.php(31): Core\Model\Database->execute(Object(PDOStatement))
+#2 C:\xampp\htdocs\src\Repository\CategoryRepository.php(13): Core\Model\Database->select('SELECT * FROM c...')
+#3 C:\xampp\htdocs\src\Controller\BaseController.php(16): App\Repository\CategoryRepository->findAll()
+#4 C:\xampp\htdocs\core\Bootstrap.php(75): App\Controller\BaseController->index()
+#5 C:\xampp\htdocs\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#6 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 12:48PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[42S02]: Base table or view not found: 1146 Table 'test.category' doesn't exist</p>
+
+         <p><strong>Code:</strong> 42S02</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Model\Database.php</p>
+
+         <p><strong>Line:</strong> 140</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Model\Database.php(140): PDOStatement->execute()
+#1 C:\xampp\htdocs\core\Model\Database.php(31): Core\Model\Database->execute(Object(PDOStatement))
+#2 C:\xampp\htdocs\src\Repository\CategoryRepository.php(13): Core\Model\Database->select('SELECT * FROM c...')
+#3 C:\xampp\htdocs\src\Controller\BaseController.php(16): App\Repository\CategoryRepository->findAll()
+#4 C:\xampp\htdocs\core\Bootstrap.php(75): App\Controller\BaseController->index()
+#5 C:\xampp\htdocs\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#6 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 12:48PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[42S02]: Base table or view not found: 1146 Table 'test.category' doesn't exist</p>
+
+         <p><strong>Code:</strong> 42S02</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Model\Database.php</p>
+
+         <p><strong>Line:</strong> 140</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Model\Database.php(140): PDOStatement->execute()
+#1 C:\xampp\htdocs\core\Model\Database.php(31): Core\Model\Database->execute(Object(PDOStatement))
+#2 C:\xampp\htdocs\src\Repository\CategoryRepository.php(13): Core\Model\Database->select('SELECT * FROM c...')
+#3 C:\xampp\htdocs\src\Controller\BaseController.php(15): App\Repository\CategoryRepository->findAll()
+#4 C:\xampp\htdocs\core\Bootstrap.php(75): App\Controller\BaseController->index()
+#5 C:\xampp\htdocs\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#6 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 12:48PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[42S02]: Base table or view not found: 1146 Table 'test.category' doesn't exist</p>
+
+         <p><strong>Code:</strong> 42S02</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Model\Database.php</p>
+
+         <p><strong>Line:</strong> 140</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Model\Database.php(140): PDOStatement->execute()
+#1 C:\xampp\htdocs\core\Model\Database.php(31): Core\Model\Database->execute(Object(PDOStatement))
+#2 C:\xampp\htdocs\src\Repository\CategoryRepository.php(13): Core\Model\Database->select('SELECT * FROM c...')
+#3 C:\xampp\htdocs\src\Controller\BaseController.php(15): App\Repository\CategoryRepository->findAll()
+#4 C:\xampp\htdocs\core\Bootstrap.php(75): App\Controller\BaseController->index()
+#5 C:\xampp\htdocs\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#6 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 12:42PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 79</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(53): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 12:42PM</p>
+
+         <p><strong>Message:</strong> Methode gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 108</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(54): Core\Bootstrap->callControllerMethod()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 12:39PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[42S02]: Base table or view not found: 1146 Table 'test.category' doesn't exist</p>
+
+         <p><strong>Code:</strong> 42S02</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Model\Database.php</p>
+
+         <p><strong>Line:</strong> 140</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Model\Database.php(140): PDOStatement->execute()
+#1 C:\xampp\htdocs\core\Model\Database.php(31): Core\Model\Database->execute(Object(PDOStatement))
+#2 C:\xampp\htdocs\src\Repository\CategoryRepository.php(13): Core\Model\Database->select('SELECT * FROM c...')
+#3 C:\xampp\htdocs\src\Controller\BaseController.php(16): App\Repository\CategoryRepository->findAll()
+#4 C:\xampp\htdocs\src\Bootstrap.php(67): App\Controller\BaseController->index()
+#5 C:\xampp\htdocs\src\Bootstrap.php(50): App\Bootstrap->loadDefaultController()
+#6 C:\xampp\htdocs\public\index.php(14): App\Bootstrap->init()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
          <p><strong>Date:</strong> Nov 09, 2020 8:46AM</p>
 
          <p><strong>Message:</strong> SQLSTATE[42S02]: Base table or view not found: 1146 Table 'test.category' doesn't exist</p>
