--- a/public/errorlog.html
+++ b/public/errorlog.html
@@ -1,5 +1,119 @@
 <h3>Exception information:</h3>
 
+         <p><strong>Date:</strong> Nov 09, 2020 17:47PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 17:40PM</p>
+
+         <p><strong>Message:</strong> Unable to find template "/messages/message.html.twig" (looked into: C:\xampp\htdocs/templates).</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\vendor\twig\twig\src\Loader\FilesystemLoader.php</p>
+
+         <p><strong>Line:</strong> 227</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\vendor\twig\twig\src\Loader\FilesystemLoader.php(131): Twig\Loader\FilesystemLoader->findTemplate('/messages/messa...')
+#1 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(261): Twig\Loader\FilesystemLoader->getCacheKey('/messages/messa...')
+#2 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(309): Twig\Environment->getTemplateClass('/messages/messa...')
+#3 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(277): Twig\Environment->load('/messages/messa...')
+#4 C:\xampp\htdocs\core\Flash.php(31): Twig\Environment->render('/messages/messa...', Array)
+#5 C:\xampp\htdocs\vendor\twig\twig\src\Extension\CoreExtension.php(1541): Core\Flash->show()
+#6 C:\xampp\htdocs\var\cache\81\81bd08a0f027f7a3344189a1a09e3847fdb005869c54ba9a59dbfa7391c511d7.php(77): twig_get_attribute(Object(Twig\Environment), Object(Twig\Source), Object(Core\Flash), 'show', Array, 'any', false, false, false, 14)
+#7 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(171): __TwigTemplate_94037fee35c59baba9645f02bac75d7fb1dc59df85bca8c49c1f7ba5548f4ca2->block_body(Array, Array)
+#8 C:\xampp\htdocs\var\cache\38\382299cdeb7bde74210670ac468aa27edecedc059028aa1a90a667ea729079dd.php(52): Twig\Template->displayBlock('body', Array, Array)
+#9 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(394): __TwigTemplate_5f7e10329b4353dcb0107cd72c6a5b6b622a8c8fb17d05992030e2cbd0bfae6d->doDisplay(Array, Array)
+#10 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(367): Twig\Template->displayWithErrorHandling(Array, Array)
+#11 C:\xampp\htdocs\var\cache\81\81bd08a0f027f7a3344189a1a09e3847fdb005869c54ba9a59dbfa7391c511d7.php(42): Twig\Template->display(Array, Array)
+#12 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(394): __TwigTemplate_94037fee35c59baba9645f02bac75d7fb1dc59df85bca8c49c1f7ba5548f4ca2->doDisplay(Array, Array)
+#13 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(367): Twig\Template->displayWithErrorHandling(Array, Array)
+#14 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(379): Twig\Template->display(Array)
+#15 C:\xampp\htdocs\vendor\twig\twig\src\TemplateWrapper.php(40): Twig\Template->render(Array, Array)
+#16 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(277): Twig\TemplateWrapper->render(Array)
+#17 C:\xampp\htdocs\src\Controller\BaseController.php(35): Twig\Environment->render('base/index.html...', Array)
+#18 C:\xampp\htdocs\core\Bootstrap.php(74): App\Controller\BaseController->index()
+#19 C:\xampp\htdocs\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#20 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#21 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 17:38PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 17:26PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 09, 2020 17:22PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
          <p><strong>Date:</strong> Nov 09, 2020 14:54PM</p>
 
          <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
