catchException method added to AbstractController.php

--- a/public/errorlog.html
+++ b/public/errorlog.html
@@ -1,5 +1,118 @@
 <h3>Exception information:</h3>
 
+         <p><strong>Date:</strong> Nov 10, 2020 13:47PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 10, 2020 13:45PM</p>
+
+         <p><strong>Message:</strong> Unexpected "fr" tag (expecting closing tag for the "block" tag defined near line 4).</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\templates\base\index.html.twig</p>
+
+         <p><strong>Line:</strong> 9</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\vendor\twig\twig\src\TokenParser\BlockTokenParser.php(45): Twig\Parser->subparse(Array, true)
+#1 C:\xampp\htdocs\vendor\twig\twig\src\Parser.php(182): Twig\TokenParser\BlockTokenParser->parse(Object(Twig\Token))
+#2 C:\xampp\htdocs\vendor\twig\twig\src\Parser.php(95): Twig\Parser->subparse(NULL, false)
+#3 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(479): Twig\Parser->parse(Object(Twig\TokenStream))
+#4 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(507): Twig\Environment->parse(Object(Twig\TokenStream))
+#5 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(348): Twig\Environment->compileSource(Object(Twig\Source))
+#6 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(309): Twig\Environment->loadTemplate('__TwigTemplate_...', 'base/index.html...')
+#7 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(277): Twig\Environment->load('base/index.html...')
+#8 C:\xampp\htdocs\src\Controller\BaseController.php(33): Twig\Environment->render('base/index.html...', Array)
+#9 [internal function]: App\Controller\BaseController->index()
+#10 C:\xampp\htdocs\core\Bootstrap.php(125): call_user_func_array(Array, Array)
+#11 C:\xampp\htdocs\core\Bootstrap.php(62): Core\Bootstrap->callControllerMethod()
+#12 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#13 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 10, 2020 13:44PM</p>
+
+         <p><strong>Message:</strong> Unable to find template "base/indx.html.twig" (looked into: C:\xampp\htdocs/templates).</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\vendor\twig\twig\src\Loader\FilesystemLoader.php</p>
+
+         <p><strong>Line:</strong> 227</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\vendor\twig\twig\src\Loader\FilesystemLoader.php(131): Twig\Loader\FilesystemLoader->findTemplate('base/indx.html....')
+#1 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(261): Twig\Loader\FilesystemLoader->getCacheKey('base/indx.html....')
+#2 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(309): Twig\Environment->getTemplateClass('base/indx.html....')
+#3 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(277): Twig\Environment->load('base/indx.html....')
+#4 C:\xampp\htdocs\src\Controller\BaseController.php(33): Twig\Environment->render('base/indx.html....', Array)
+#5 [internal function]: App\Controller\BaseController->index()
+#6 C:\xampp\htdocs\core\Bootstrap.php(125): call_user_func_array(Array, Array)
+#7 C:\xampp\htdocs\core\Bootstrap.php(62): Core\Bootstrap->callControllerMethod()
+#8 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#9 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 10, 2020 13:44PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 10, 2020 13:44PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
          <p><strong>Date:</strong> Nov 09, 2020 17:47PM</p>
 
          <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
