--- a/public/errorlog.html
+++ b/public/errorlog.html
@@ -1,5 +1,198 @@
 <h3>Exception information:</h3>
 
+         <p><strong>Date:</strong> Nov 11, 2020 7:21AM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 11, 2020 7:16AM</p>
+
+         <p><strong>Message:</strong> Unknown "asset" function.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\templates\base.html.twig</p>
+
+         <p><strong>Line:</strong> 7</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(455): Twig\ExpressionParser->getFunctionNodeClass('asset', 7)
+#1 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(235): Twig\ExpressionParser->getFunctionNode('asset', 7)
+#2 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(175): Twig\ExpressionParser->parsePrimaryExpression()
+#3 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(70): Twig\ExpressionParser->getPrimary()
+#4 C:\xampp\htdocs\vendor\twig\twig\src\Parser.php(139): Twig\ExpressionParser->parseExpression()
+#5 C:\xampp\htdocs\vendor\twig\twig\src\TokenParser\BlockTokenParser.php(45): Twig\Parser->subparse(Array, true)
+#6 C:\xampp\htdocs\vendor\twig\twig\src\Parser.php(182): Twig\TokenParser\BlockTokenParser->parse(Object(Twig\Token))
+#7 C:\xampp\htdocs\vendor\twig\twig\src\Parser.php(95): Twig\Parser->subparse(NULL, false)
+#8 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(479): Twig\Parser->parse(Object(Twig\TokenStream))
+#9 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(507): Twig\Environment->parse(Object(Twig\TokenStream))
+#10 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(348): Twig\Environment->compileSource(Object(Twig\Source))
+#11 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(322): Twig\Environment->loadTemplate('__TwigTemplate_...', 'base.html.twig', NULL)
+#12 C:\xampp\htdocs\var\cache\cb\cbbb7c30f5041729a01aacef971c7a4aae6560261f8c85b27973228abfe93184.php(41): Twig\Template->loadTemplate('base.html.twig', 'base/index.html...', 1)
+#13 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(394): __TwigTemplate_7fb9dc1c2772a14dba089956a83bc81e08d354bc100937e391517ef9a3630e88->doDisplay(Array, Array)
+#14 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(367): Twig\Template->displayWithErrorHandling(Array, Array)
+#15 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(379): Twig\Template->display(Array)
+#16 C:\xampp\htdocs\vendor\twig\twig\src\TemplateWrapper.php(40): Twig\Template->render(Array, Array)
+#17 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(277): Twig\TemplateWrapper->render(Array)
+#18 C:\xampp\htdocs\src\Controller\BaseController.php(35): Twig\Environment->render('base/index.html...', Array)
+#19 C:\xampp\htdocs\core\Bootstrap.php(74): App\Controller\BaseController->index()
+#20 C:\xampp\htdocs\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#21 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#22 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 11, 2020 7:14AM</p>
+
+         <p><strong>Message:</strong> Unknown "encore_entry_link_tags" function.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\templates\base.html.twig</p>
+
+         <p><strong>Line:</strong> 7</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(455): Twig\ExpressionParser->getFunctionNodeClass('encore_entry_li...', 7)
+#1 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(235): Twig\ExpressionParser->getFunctionNode('encore_entry_li...', 7)
+#2 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(175): Twig\ExpressionParser->parsePrimaryExpression()
+#3 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(70): Twig\ExpressionParser->getPrimary()
+#4 C:\xampp\htdocs\vendor\twig\twig\src\Parser.php(139): Twig\ExpressionParser->parseExpression()
+#5 C:\xampp\htdocs\vendor\twig\twig\src\TokenParser\BlockTokenParser.php(45): Twig\Parser->subparse(Array, true)
+#6 C:\xampp\htdocs\vendor\twig\twig\src\Parser.php(182): Twig\TokenParser\BlockTokenParser->parse(Object(Twig\Token))
+#7 C:\xampp\htdocs\vendor\twig\twig\src\Parser.php(95): Twig\Parser->subparse(NULL, false)
+#8 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(479): Twig\Parser->parse(Object(Twig\TokenStream))
+#9 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(507): Twig\Environment->parse(Object(Twig\TokenStream))
+#10 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(348): Twig\Environment->compileSource(Object(Twig\Source))
+#11 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(322): Twig\Environment->loadTemplate('__TwigTemplate_...', 'base.html.twig', NULL)
+#12 C:\xampp\htdocs\var\cache\cb\cbbb7c30f5041729a01aacef971c7a4aae6560261f8c85b27973228abfe93184.php(41): Twig\Template->loadTemplate('base.html.twig', 'base/index.html...', 1)
+#13 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(394): __TwigTemplate_7fb9dc1c2772a14dba089956a83bc81e08d354bc100937e391517ef9a3630e88->doDisplay(Array, Array)
+#14 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(367): Twig\Template->displayWithErrorHandling(Array, Array)
+#15 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(379): Twig\Template->display(Array)
+#16 C:\xampp\htdocs\vendor\twig\twig\src\TemplateWrapper.php(40): Twig\Template->render(Array, Array)
+#17 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(277): Twig\TemplateWrapper->render(Array)
+#18 C:\xampp\htdocs\src\Controller\BaseController.php(35): Twig\Environment->render('base/index.html...', Array)
+#19 C:\xampp\htdocs\core\Bootstrap.php(74): App\Controller\BaseController->index()
+#20 C:\xampp\htdocs\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#21 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#22 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 11, 2020 7:14AM</p>
+
+         <p><strong>Message:</strong> Unknown "encore_entry_link_tags" function.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\templates\base.html.twig</p>
+
+         <p><strong>Line:</strong> 7</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(455): Twig\ExpressionParser->getFunctionNodeClass('encore_entry_li...', 7)
+#1 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(235): Twig\ExpressionParser->getFunctionNode('encore_entry_li...', 7)
+#2 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(175): Twig\ExpressionParser->parsePrimaryExpression()
+#3 C:\xampp\htdocs\vendor\twig\twig\src\ExpressionParser.php(70): Twig\ExpressionParser->getPrimary()
+#4 C:\xampp\htdocs\vendor\twig\twig\src\Parser.php(139): Twig\ExpressionParser->parseExpression()
+#5 C:\xampp\htdocs\vendor\twig\twig\src\TokenParser\BlockTokenParser.php(45): Twig\Parser->subparse(Array, true)
+#6 C:\xampp\htdocs\vendor\twig\twig\src\Parser.php(182): Twig\TokenParser\BlockTokenParser->parse(Object(Twig\Token))
+#7 C:\xampp\htdocs\vendor\twig\twig\src\Parser.php(95): Twig\Parser->subparse(NULL, false)
+#8 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(479): Twig\Parser->parse(Object(Twig\TokenStream))
+#9 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(507): Twig\Environment->parse(Object(Twig\TokenStream))
+#10 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(348): Twig\Environment->compileSource(Object(Twig\Source))
+#11 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(322): Twig\Environment->loadTemplate('__TwigTemplate_...', 'base.html.twig', NULL)
+#12 C:\xampp\htdocs\var\cache\cb\cbbb7c30f5041729a01aacef971c7a4aae6560261f8c85b27973228abfe93184.php(41): Twig\Template->loadTemplate('base.html.twig', 'base/index.html...', 1)
+#13 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(394): __TwigTemplate_7fb9dc1c2772a14dba089956a83bc81e08d354bc100937e391517ef9a3630e88->doDisplay(Array, Array)
+#14 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(367): Twig\Template->displayWithErrorHandling(Array, Array)
+#15 C:\xampp\htdocs\vendor\twig\twig\src\Template.php(379): Twig\Template->display(Array)
+#16 C:\xampp\htdocs\vendor\twig\twig\src\TemplateWrapper.php(40): Twig\Template->render(Array, Array)
+#17 C:\xampp\htdocs\vendor\twig\twig\src\Environment.php(277): Twig\TemplateWrapper->render(Array)
+#18 C:\xampp\htdocs\src\Controller\BaseController.php(35): Twig\Environment->render('base/index.html...', Array)
+#19 C:\xampp\htdocs\core\Bootstrap.php(74): App\Controller\BaseController->index()
+#20 C:\xampp\htdocs\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#21 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#22 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 10, 2020 21:04PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 10, 2020 20:17PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 10, 2020 20:16PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
          <p><strong>Date:</strong> Nov 10, 2020 17:53PM</p>
 
          <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
