Database.php updated

--- a/public/errorlog.html
+++ b/public/errorlog.html
@@ -1,5 +1,154 @@
 <h3>Exception information:</h3>
 
+         <p><strong>Date:</strong> Nov 11, 2020 22:16PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[HY000] [1049] Unknown database 'vapita_mvc'</p>
+
+         <p><strong>Code:</strong> 1049</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\baldur\core\Model\Database.php</p>
+
+         <p><strong>Line:</strong> 16</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\baldur\core\Model\Database.php(16): PDO->__construct('mysql:host=loca...', 'root', '')
+#1 C:\xampp\htdocs\baldur\core\Model\Model.php(11): Core\Model\Database->__construct()
+#2 C:\xampp\htdocs\baldur\src\Controller\BaseController.php(21): Core\Model\Model->__construct()
+#3 C:\xampp\htdocs\baldur\core\Bootstrap.php(74): App\Controller\BaseController->index()
+#4 C:\xampp\htdocs\baldur\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#5 C:\xampp\htdocs\baldur\public\index.php(14): Core\Bootstrap->init()
+#6 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 11, 2020 22:15PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\baldur\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\baldur\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\baldur\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 11, 2020 22:15PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[HY000] [1049] Unknown database 'vapita_mvc'</p>
+
+         <p><strong>Code:</strong> 1049</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\baldur\core\Model\Database.php</p>
+
+         <p><strong>Line:</strong> 16</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\baldur\core\Model\Database.php(16): PDO->__construct('mysql:host=loca...', 'root', '')
+#1 C:\xampp\htdocs\baldur\core\Model\Model.php(11): Core\Model\Database->__construct()
+#2 C:\xampp\htdocs\baldur\src\Controller\BaseController.php(21): Core\Model\Model->__construct()
+#3 C:\xampp\htdocs\baldur\core\Bootstrap.php(74): App\Controller\BaseController->index()
+#4 C:\xampp\htdocs\baldur\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#5 C:\xampp\htdocs\baldur\public\index.php(14): Core\Bootstrap->init()
+#6 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 11, 2020 22:15PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\baldur\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\baldur\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\baldur\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 11, 2020 22:15PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[HY000] [1049] Unknown database 'vapita_mvc'</p>
+
+         <p><strong>Code:</strong> 1049</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\baldur\core\Model\Database.php</p>
+
+         <p><strong>Line:</strong> 16</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\baldur\core\Model\Database.php(16): PDO->__construct('mysql:host=loca...', 'root', '')
+#1 C:\xampp\htdocs\baldur\core\Model\Model.php(11): Core\Model\Database->__construct()
+#2 C:\xampp\htdocs\baldur\src\Controller\BaseController.php(21): Core\Model\Model->__construct()
+#3 C:\xampp\htdocs\baldur\core\Bootstrap.php(74): App\Controller\BaseController->index()
+#4 C:\xampp\htdocs\baldur\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#5 C:\xampp\htdocs\baldur\public\index.php(14): Core\Bootstrap->init()
+#6 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 11, 2020 22:15PM</p>
+
+         <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
+
+         <p><strong>Code:</strong> 0</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\baldur\core\Bootstrap.php</p>
+
+         <p><strong>Line:</strong> 86</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\baldur\core\Bootstrap.php(61): Core\Bootstrap->loadExistingController()
+#1 C:\xampp\htdocs\baldur\public\index.php(14): Core\Bootstrap->init()
+#2 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Nov 11, 2020 22:15PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[HY000] [1049] Unknown database 'vapita_mvc'</p>
+
+         <p><strong>Code:</strong> 1049</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\baldur\core\Model\Database.php</p>
+
+         <p><strong>Line:</strong> 16</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\baldur\core\Model\Database.php(16): PDO->__construct('mysql:host=loca...', 'root', '')
+#1 C:\xampp\htdocs\baldur\core\Model\Model.php(11): Core\Model\Database->__construct()
+#2 C:\xampp\htdocs\baldur\src\Controller\BaseController.php(21): Core\Model\Model->__construct()
+#3 C:\xampp\htdocs\baldur\core\Bootstrap.php(74): App\Controller\BaseController->index()
+#4 C:\xampp\htdocs\baldur\core\Bootstrap.php(58): Core\Bootstrap->loadDefaultController()
+#5 C:\xampp\htdocs\baldur\public\index.php(14): Core\Bootstrap->init()
+#6 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
          <p><strong>Date:</strong> Nov 11, 2020 7:21AM</p>
 
          <p><strong>Message:</strong> Controller-Klasse gibts nicht, daher m&ouml;chte ich nun eine Fehlerseite ausgeben.</p>
